Closed Bug 14160 Opened 25 years ago Closed 25 years ago

[PP] App crashes in profile manager at startup

Categories

(Core Graveyard :: Profile: BackEnd, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jay, Assigned: dveditz)

References

Details

If you already have a Mozilla Registry file, apprunner should detect it and
start apprunner with your usual profile.  With build 1999091708, apprunner
doesn't seem to recognize the file and therefore brings up the Profile Manager
everytime.  If you click next a couple of times and click finish, apprunner
crashes.  If you look in HD:System Folder:Preferences for the Mozilla Registry
file, the original is there (if you didn't delete it) and a new registry file
appears but with a bunch of garbage attached to the end of the filename...here
is an example:

Mozilla Registry^&*$@^


0
Summary: App crashes in profile manager at startup → [PP] App crashes in profile manager at startup
Note that this is a Mac only problem.
*** Bug 14185 has been marked as a duplicate of this bug. ***
Assignee: selmer → dveditz
This is related to Dan's checkin last night.  Somewhere a string length isn't
matched up properly.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I think my fix works, but can't test. Seth is looking at it and I'll reopen if
it fails.
Status: RESOLVED → REOPENED
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
I fixed some bad assumptions regarding Handles being null terminated (whcih they
are not).
Status: RESOLVED → VERIFIED
this problem has not been seen in awhile
certainly not on 1999100713
Component: Profile Manager → Profile Manager BackEnd
Moving all Profile Manager bugs to new Profile Manager Backend component.
Profile Manager component to be deleted.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.