Fix for bug 14160 -- bad registry name. Don't assume that Mac Handles are nul terminated.